crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__subtyping__subsumption3.snap
---
source: crates/service/tests/diagnostics/typeck/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 17
        },
        "end": {
          "line": 7,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref $g1)], found [(ref $g2)] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 4
              },
              "end": {
                "line": 7,
                "character": 17
              }
            }
          },
          "message": "expected type `(ref $g1)`, found `(ref $g2)`"
        }
      ]
    }
  ]
}
