crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__subtyping__subsumption8.snap
---
source: crates/service/tests/diagnostics/typeck/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 17
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref $f11)], found [(ref $f21)] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 4
              },
              "end": {
                "line": 5,
                "character": 17
              }
            }
          },
          "message": "expected type `(ref $f11)`, found `(ref $f21)`"
        }
      ]
    }
  ]
}
